boltffi_bindgen/src/render/csharp/snapshots/boltffi_bindgen__render__csharp__templates__tests__snapshot_class_event_bus_with_streams.snap
---
source: boltffi_bindgen/src/render/csharp/templates.rs
expression: template.render().unwrap()
---
// <auto-generated>
// This file was generated by BoltFFI. Do not edit.
// </auto-generated>
#nullable enable

using System;
using System.Collections.Generic;
using System.Threading;
using System.Runtime.CompilerServices;
using System.Threading.Tasks;

namespace Demo
{
    public sealed class EventBus : IDisposable
    {
        private IntPtr _handle;

        // Private handle-adopting ctor; used only by chained `: this(...)` and the static factories below.
        private EventBus(IntPtr handle)
        {
            _handle = handle;
        }

        public async IAsyncEnumerable<int> SubscribeValues([EnumeratorCancellation] CancellationToken cancellationToken = default)
        {
            ThrowIfDisposed();
            IntPtr subscription = NativeMethods.EventBusSubscribeValues(_handle);
            if (subscription == IntPtr.Zero) yield break;

            try
            {
                while (true)
                {
                    cancellationToken.ThrowIfCancellationRequested();

                    while (true)
                    {
                        int[] _items;
                        int _itemCount;
                        _items = new int[BoltFFIStream.DefaultBatchSize];
                        UIntPtr _count;
                        unsafe
                        {
                            fixed (int* _itemsPtr = _items)
                            {
                                _count = NativeMethods.EventBusSubscribeValuesPopBatch(subscription, (IntPtr)_itemsPtr, (UIntPtr)_items.Length);
                            }
                        }
                        _itemCount = checked((int)(nuint)_count);
                        if (_itemCount == 0) break;

                        for (int _i = 0; _i < _itemCount; _i++)
                        {
                            cancellationToken.ThrowIfCancellationRequested();
                            yield return _items[_i];
                        }

                        if (_itemCount < BoltFFIStream.DefaultBatchSize) break;
                    }

                    int _waitResult = await global::System.Threading.Tasks.Task.Run(
                        () => NativeMethods.EventBusSubscribeValuesWait(subscription, BoltFFIStream.WaitTimeoutMilliseconds),
                        cancellationToken).ConfigureAwait(false);
                    if (_waitResult < BoltFFIStream.WaitTimeout) yield break;
                }
            }
            finally
            {
                NativeMethods.EventBusSubscribeValuesUnsubscribe(subscription);
                NativeMethods.EventBusSubscribeValuesFree(subscription);
            }
        }

        public async IAsyncEnumerable<Point> SubscribePoints([EnumeratorCancellation] CancellationToken cancellationToken = default)
        {
            ThrowIfDisposed();
            IntPtr subscription = NativeMethods.EventBusSubscribePoints(_handle);
            if (subscription == IntPtr.Zero) yield break;

            try
            {
                while (true)
                {
                    cancellationToken.ThrowIfCancellationRequested();

                    while (true)
                    {
                        Point[] _items;
                        int _itemCount;
                        _items = new Point[BoltFFIStream.DefaultBatchSize];
                        UIntPtr _count;
                        unsafe
                        {
                            fixed (Point* _itemsPtr = _items)
                            {
                                _count = NativeMethods.EventBusSubscribePointsPopBatch(subscription, (IntPtr)_itemsPtr, (UIntPtr)_items.Length);
                            }
                        }
                        _itemCount = checked((int)(nuint)_count);
                        if (_itemCount == 0) break;

                        for (int _i = 0; _i < _itemCount; _i++)
                        {
                            cancellationToken.ThrowIfCancellationRequested();
                            yield return _items[_i];
                        }

                        if (_itemCount < BoltFFIStream.DefaultBatchSize) break;
                    }

                    int _waitResult = await global::System.Threading.Tasks.Task.Run(
                        () => NativeMethods.EventBusSubscribePointsWait(subscription, BoltFFIStream.WaitTimeoutMilliseconds),
                        cancellationToken).ConfigureAwait(false);
                    if (_waitResult < BoltFFIStream.WaitTimeout) yield break;
                }
            }
            finally
            {
                NativeMethods.EventBusSubscribePointsUnsubscribe(subscription);
                NativeMethods.EventBusSubscribePointsFree(subscription);
            }
        }

        public async IAsyncEnumerable<string> SubscribeLabels([EnumeratorCancellation] CancellationToken cancellationToken = default)
        {
            ThrowIfDisposed();
            IntPtr subscription = NativeMethods.EventBusSubscribeLabels(_handle);
            if (subscription == IntPtr.Zero) yield break;

            try
            {
                while (true)
                {
                    cancellationToken.ThrowIfCancellationRequested();

                    while (true)
                    {
                        string[] _items;
                        int _itemCount;
                        FfiBuf _buf = NativeMethods.EventBusSubscribeLabelsPopBatch(subscription, (UIntPtr)BoltFFIStream.DefaultBatchSize);
                        try
                        {
                            if (_buf.len == UIntPtr.Zero) break;
                            var _reader = new WireReader(_buf);
                            _itemCount = _reader.ReadI32();
                            _items = new string[_itemCount];
                            for (int _i = 0; _i < _itemCount; _i++)
                            {
                                _items[_i] = _reader.ReadString();
                            }
                        }
                        finally
                        {
                            NativeMethods.FreeBuf(_buf);
                        }
                        if (_itemCount == 0) break;

                        for (int _i = 0; _i < _itemCount; _i++)
                        {
                            cancellationToken.ThrowIfCancellationRequested();
                            yield return _items[_i];
                        }

                        if (_itemCount < BoltFFIStream.DefaultBatchSize) break;
                    }

                    int _waitResult = await global::System.Threading.Tasks.Task.Run(
                        () => NativeMethods.EventBusSubscribeLabelsWait(subscription, BoltFFIStream.WaitTimeoutMilliseconds),
                        cancellationToken).ConfigureAwait(false);
                    if (_waitResult < BoltFFIStream.WaitTimeout) yield break;
                }
            }
            finally
            {
                NativeMethods.EventBusSubscribeLabelsUnsubscribe(subscription);
                NativeMethods.EventBusSubscribeLabelsFree(subscription);
            }
        }

        internal IntPtr RawHandle => _handle;

        private void ThrowIfDisposed()
        {
            if (_handle == IntPtr.Zero) throw new ObjectDisposedException(nameof(EventBus));
        }

        public void Dispose()
        {
            IntPtr handle = Interlocked.Exchange(ref _handle, IntPtr.Zero);
            if (handle == IntPtr.Zero) return;
            NativeMethods.EventBusFree(handle);
            GC.SuppressFinalize(this);
        }

        ~EventBus()
        {
            Dispose();
        }
    }
}
